@@ -6,6 +6,7 @@ v. 1.3.1 beta
 =============
 
 - tela de gerenciamento de usuários
+- tela de gerenciamento do perfil
 - possibilidade de escolher o endereço ip do banco de dados
 
 
